Project cards and collapsible content.

--- a/css/colours.scss
+++ b/css/colours.scss
@@ -6,4 +6,5 @@ $text-icon-colour: #ffffff;
 $accent-colour: #ff4081;
 $primary-text-colour: #212121;
 $secondary-text-colour: #757575;
-$dividor-colour: #bdbdbd;
+$divider-colour: #bdbdbd;
+$off-white: #f8f9fa;
